syntax="proto3";
package services;

import "google/api/annotations.proto";
import "area.proto";
import "model/music.proto";

option go_package="grpc/pbfiles";

message ProdRequest {
  int32 prod_id=1;  // 传入的商品id
  Area area=2;  // 商品区域
}

message ProdResponse {
  int32 prod_stock=1; // 商品库存
}

message QuerySize {
  int32 size=1;
}

// 商品列表返回
message ProdResponseList {
  repeated ProdResponse list=1;
}

service ProdService {
  rpc GetProdStock(ProdRequest) returns (ProdResponse) {
    option (google.api.http)={
      get:"/v1/prod/{prod_id}"
    };
  }

  rpc GetProdStocks(QuerySize) returns (ProdResponseList) {
    option (google.api.http)={
      get:"/v1/products"
    };
  }

  // music包名不同，才用model.Music引入
  rpc GetProdInfo(ProdRequest) returns (model.Music) {
    option (google.api.http)={
      get:"/v1/musics/{prod_id}"
    };
  }
}